force-app/main/default/objects/peer__Investment_Booking__c/peer__Investment_Booking__c.object-meta.xml
<CustomObject>
    <label>Investment Booking</label>
    <nameField>
        <displayFormat>IB-{00000000}</displayFormat>
        <label>Investment Booking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investment Bookings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>