force-app/main/default/objects/peer__Investment_Booking__c/fields/peer__Commitment_Amount__c.field-meta.xml
<CustomField>
    <fullName>peer__Commitment_Amount__c</fullName>
    <label>Commitment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>