force-app/main/default/objects/peer__Investment_Booking__c/fields/peer__Commitment_Percent__c.field-meta.xml
<CustomField>
    <fullName>peer__Commitment_Percent__c</fullName>
    <label>Commitment Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>