force-app/main/default/objects/peer__Investment_Booking__c/fields/peer__Facility_Limit__c.field-meta.xml
<CustomField>
    <fullName>peer__Facility_Limit__c</fullName>
    <label>Facility Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>