force-app/main/default/objects/peer__Investment_Booking__c/fields/peer__Share__c.field-meta.xml
<CustomField>
    <fullName>peer__Share__c</fullName>
    <formula>IF (ISPICKVAL(peer__Loan_Application__r.peer__Stage__c, &#39;Funded&#39;),
  peer__Investment_Amount__c / peer__Loan_Application__r.peer__Amount_Funded__c,
  peer__Investment_Amount__c / peer__Loan_Application__r.peer__Requested_Loan_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>