force-app/main/default/objects/peer__Investment_Booking__c/validationRules/peer__Amount_should_be_positive.validationRule-meta.xml
<ValidationRule>
    <fullName>peer__Amount_should_be_positive</fullName>
    <active>false</active>
    <errorConditionFormula>peer__Investment_Amount__c &lt;= 0</errorConditionFormula>
    <errorMessage>Please enter a positive investment amount.</errorMessage>
</ValidationRule>