force-app/main/default/objects/peer__Investment_Booking__c/validationRules/peer__Certificate_Rate_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>peer__Certificate_Rate_Check</fullName>
    <active>false</active>
    <errorConditionFormula>peer__Certificate_Rate__c &gt;  peer__Loan_Application__r.peer__Interest_Rate__c</errorConditionFormula>
    <errorMessage>The certificate rate cannot be greater than the loan application&#39;s interest rate.</errorMessage>
</ValidationRule>