force-app/main/default/objects/peer__Investment_Booking__c/validationRules/peer__Check_Available_Funds.validationRule-meta.xml
<ValidationRule>
    <fullName>peer__Check_Available_Funds</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() &amp;&amp; (  peer__Booking_Order__r.peer__Investor__r.peer__Funds_Available_For_Investment__c  &lt;  peer__Investment_Amount__c )</errorConditionFormula>
    <errorMessage>You don&#39;t have enough funds to book an investment.</errorMessage>
</ValidationRule>