force-app/main/default/objects/peer__Investment_Booking__c/validationRules/peer__Loan_Application_Status_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>peer__Loan_Application_Status_Check</fullName>
    <active>false</active>
    <errorConditionFormula>ISNEW() &amp;&amp; NOT(ISPICKVAL(peer__Loan_Application__r.peer__Stage__c,&#39;In Funding&#39;))</errorConditionFormula>
    <errorMessage>Loan application stage is invalid. Booking can be created only in &#39;In Funding&#39; stage.</errorMessage>
</ValidationRule>